More whitespace fixes

--- a/themes/luke/source/css/_post.scss
+++ b/themes/luke/source/css/_post.scss
@@ -61,13 +61,8 @@
     border-top: 1px solid $border;
     border-bottom: 1px solid $border;
 
-    // Author bio
-    .post-author {
-      padding-top: 40px;
-
-      .media-content {
-        padding-left: 20px;
-      }
+    .media-left {
+      margin-right: 20px;
     }
   }
 }
