--- a/themes/luke/source/css/_site.scss
+++ b/themes/luke/source/css/_site.scss
@@ -34,6 +34,12 @@ a {
 .sidebar {
   padding-bottom: 20px;
   border-bottom: 1px solid $border;
+
+  &.bio {
+    .image {
+      margin-bottom: $size-normal;
+    }
+  }
 }
 
 #site-footer {
